adapter user-service